data/derived/sp14/progs/unify/prog3147.ml.out
Characters 61-69:
  wwhile (let func x y = (x, x y <> y) in func f b,b);;
                                          ^^^^^^^^
Error: This expression has type ('a -> 'a) * bool
       but an expression was expected of type 'b -> 'b * bool
